--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="noise"></div>
+    <main> 
     <title>Damian Alberto García - Full Stack Developer & Graphic Designer</title>
     <style>
         body {
@@ -172,6 +177,10 @@
         </div>
     </div>
 </div>
+    
 
 </body>
 </html>
+           </main>
+    <script src="scripts.js"></script>
+</body>
