--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+   
+
 </head>
 <body>
+    <div class="rain-container"></div>
     <div class="noise"></div>
     <main> 
     <title>Damian Alberto García - Full Stack Developer & Graphic Designer</title>
