--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
         </div>
     </div>
 </div>
+<section id="rhythm-game">
+    <h2>Proyecto de Juego Rítmico</h2>
+    <iframe src="https://escueladavinci.itch.io/edith" width="800" height="600" frameborder="0" allowfullscreen></iframe>
+    <p>Juego desarrollado en Construct 2. ¡Prueba tus habilidades rítmicas!</p>
+</section>
 
 <div class="experience">
     <div class="terminal">
