--- a/index.html
+++ b/index.html
@@ -124,11 +124,6 @@
         </div>
     </div>
 </div>
-<section id="rhythm-game">
-    <h2>Proyecto de Juego Rítmico</h2>
-    <iframe src="https://escueladavinci.itch.io/edith" width="800" height="600" frameborder="0" allowfullscreen></iframe>
-    <p>Juego desarrollado en Construct 2. ¡Prueba tus habilidades rítmicas!</p>
-</section>
 
 <div class="experience">
     <div class="terminal">
@@ -155,6 +150,30 @@
                     <ul>
                         <li><span class="arrow">▹</span> Desarrollo de aplicaciones de gestión de inventarios</li>
                     </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="projects">
+    <div class="terminal">
+        <div class="terminal-header">
+            <span class="terminal-button"></span>
+            <span class="terminal-button"></span>
+            <span class="terminal-button"></span>
+        </div>
+        <div class="terminal-content">
+            <p class="command">$ cat ./projects.md</p>
+            <div class="project-grid">
+                <div class="card">
+                    <h3>Calculadora de Precios</h3>
+                    <a href="https://damyxdx.github.io/calculadoradeprecios/" target="_blank">Visitar el Proyecto</a>
+                    <p>Una herramienta interactiva para calcular precios de productos.</p>
+                </div>
+                <div class="card">
+                    <h3>Juego en Construct 2 - "Edith"</h3>
+                    <a href="https://escueladavinci.itch.io/edith" target="_blank">Jugar al Juego</a>
+                    <p>Un juego desarrollado en Construct 2 como parte de mis estudios en Escuela Da Vinci.</p>
                 </div>
             </div>
         </div>
