"Added new 'card' element to index.html with details about 'Curso avanzado Full Stack con Python' course"

--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@
                     <h4>Curso avanzado diseñador gráfico</h4>
                     <p class="period">2012 - 2013</p>
                 </div>
+                <div class="card">
+                    <h3>Buenos Aires Aprende</h3>
+                    <h4>Curso avanzado Full Stack con Python</h4>
+                    <p class="period">2024 - 2024</p>
+                </div>
             </div>
         </div>
     </div>
