"Added navigation menu to index.html, implemented smooth scrolling for anchor links in scripts.js, and added corresponding styles to styles.css"

--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 
 </head>
 <body>
+    <header>
+        <nav>
+            <ul class="nav-bar">
+                <li><a href="#skills">Habilidades</a></li>
+                <li><a href="#experience">Experiencia</a></li>
+                <li><a href="#projects">Proyectos</a></li>
+                <li><a href="#education">Educación</a></li>
+                <li><a href="A_Damian_Garcia_CV.pdf" download="A_Damian_Garcia_CV.pdf">Descargar CV</a></li>
+            </ul>
+        </nav>
+    </header>
   
     <div class="noise"></div>
     <main> 
