--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 <li><a href="#experience">Experiencia</a></li>
                 <li><a href="#projects">Proyectos</a></li>
                 <li><a href="#education">Educación</a></li>
-                <li><a href="https://github.com/damyxdx/adamiangarcia/blob/0ff9bfeea7285ef8fc10fc517f3a66512a39d5f3/A_Damian_Garcia_CV.pdf" download="A_Damian_Garcia_CV.pdf">Descargar CV</a></li>
+                <li><a href="https://drive.google.com/uc?export=download&id=1_bUbgyIHDfdxCaXLAYhepA2LkW_2GRLM" target="_blank">Descargar CV</a>
+                </li>
             </ul>
         </nav>
     </header>
