--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9DDZ8NYCFZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9DDZ8NYCFZ');
+</script>
     <meta charset="UTF-8">
     <meta name="description" content="Portfolio de Damian Alberto García - Full Stack Developer y Diseñador Gráfico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
