--- a/index.html
+++ b/index.html
@@ -212,33 +212,25 @@
 
   <!-- SCRIPT DE BEHANCE FEED -->
   <script>
-  fetch("https://rss.app/feeds/v1.1/ICpiAD6mPcxbRr5y.json")
-    .then(response => response.json())
-    .then(data => {
-      const container = document.getElementById("behance-feed");
-      data.items.slice(0, 6).forEach(item => {
-        // Extraer imagen desde la descripción con una expresión regular
-        const match = item.description.match(/<img[^>]+src="([^">]+)"/);
-        const imgSrc = match ? match[1] : "";
-
-        const project = document.createElement("div");
-        project.style.width = "250px";
-        project.innerHTML = `
-          <a href="${item.link}" target="_blank" style="text-decoration: none; color: inherit;">
-            <img src="${imgSrc}" alt="${item.title}" style="width:100%; border-radius:10px; box-shadow: 0 2px 10px rgba(0,0,0,0.2);">
-            <p style="font-weight:bold; margin-top: 8px;">${item.title}</p>
-          </a>
-        `;
-        container.appendChild(project);
-      });
-    })
-    .catch(error => console.error("Error al cargar el feed de Behance:", error));
-</script>
+    fetch("https://rss.app/feeds/v1.1/xqBIvsfje7nDgvI5.json")
+      .then(response => response.json())
+      .then(data => {
+        const container = document.getElementById("behance-feed");
+        data.items.slice(0, 6).forEach(item => {
+          const project = document.createElement("div");
+          project.style.width = "250px";
+          project.innerHTML = `
+            <a href="${item.link}" target="_blank" style="text-decoration: none; color: inherit;">
+              <img src="${item.enclosure}" alt="${item.title}" style="width:100%; border-radius:10px; box-shadow: 0 2px 10px rgba(0,0,0,0.2);">
+              <p style="font-weight:bold; margin-top: 8px;">${item.title}</p>
+            </a>
+          `;
+          container.appendChild(project);
+        });
+      })
+      .catch(error => console.error("Error al cargar el feed de Behance:", error));
+  </script>
 
   <script src="scripts.js"></script>
 </body>
 </html>
-
-</main>
-    <script src="scripts.js"></script>
-</body>
