--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
   <header>
     <nav>
       <ul class="nav-bar">
-        <li><a href="https://drive.google.com/uc?export=download&id=1byrK25WjU9DL1jUUpqez4PZbGgtCVB__" target="_blank">Descargar CV</a></li>
+        <li><a href="https://drive.google.com/uc?export=download&id=19l25H_G3CxjbQGzHN0mgbvqVu-ts8HmS" target="_blank">Descargar CV</a>
+</li>
       </ul>
     </nav>
   </header>
