--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <p class="command">$ social</p>
           <div class="social-links">
             <a href="https://www.linkedin.com/in/alberto-damian-garcia-603a20220/" target="_blank">linkedin/damiangarcia</a>
-            <a href="https://github.com/damyxdx" target="_blank">github/damyxdx</a>
+            <a href="https://github.com/adamiangarciadev" target="_blank">github/adamiangarciadev</a>
             <a href="https://www.behance.net/adamiangarcia" target="_blank">behance/adamiangarcia</a>
           </div>
         </div>
@@ -164,7 +164,7 @@
           <div class="project-grid">
             <div class="card">
               <h3>Calculadora de Precios</h3>
-              <a href="https://damyxdx.github.io/calculadoradeprecios/" target="_blank">Visitar el Proyecto</a>
+              <a href="https://adamiangarciadev.github.io/control_de_precios_web-github/" target="_blank">Visitar el Proyecto</a>
               <p>Una herramienta interactiva para calcular precios de productos.</p>
             </div>
             <div class="card">
